[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scripts/Core/Farmer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scripts/HUD/HUD_GAME.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scripts/Core/Samoussa.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scripts/Core/Unlock.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://src/assets/World/Tiles/2.png" type="Texture" id=6]
[ext_resource path="res://src/assets/World/BG/BG.png" type="Texture" id=7]
[ext_resource path="res://src/assets/World/Object/Bush (1).png" type="Texture" id=8]
[ext_resource path="res://src/assets/World/Object/Tree_2.png" type="Texture" id=9]
[ext_resource path="res://src/assets/World/Object/Stone.png" type="Texture" id=10]

[sub_resource type="TileSet" id=1]
0/name = "2.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Bush (1).png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Tree_2.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 294, 320 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Stone.png 3"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 98, 70 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="HUD_GAME" parent="." instance=ExtResource( 2 )]

[node name="Farmer" parent="." instance=ExtResource( 1 )]
position = Vector2( -8, 328 )

[node name="Unlock" parent="." instance=ExtResource( 4 )]

[node name="Samoussa" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 0 )

[node name="Decoration" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = -1
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 851972, 2, 0, 851981, 2, 0, 851990, 2, 0, 1114112, 1, 0, 1114114, 3, 0, 1114121, 1, 0, 1114122, 3, 0, 1114127, 1, 0, 1114130, 3, 0, 1114132, 3, 0, 1114136, 1, 0, 1179648, 0, 0, 1179650, 0, 0, 1179652, 0, 0, 1179654, 0, 0, 1179656, 0, 0, 1179658, 0, 0, 1179660, 0, 0, 1179662, 0, 0, 1179664, 0, 0, 1179666, 0, 0, 1179668, 0, 0, 1179670, 0, 0, 1179672, 0, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510, 300.5 )
scale = Vector2( 1.028, 0.798667 )
z_index = -2
texture = ExtResource( 7 )

[connection signal="autoclick" from="Farmer" to="." method="_on_Farmer_autoclick"]
[connection signal="new_level" from="Unlock" to="." method="_on_Unlock_new_level"]
[connection signal="updateItem" from="Samoussa" to="." method="_on_Samoussa_updateItem"]
